[package]
name = "someash"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
blake2 = "0.10"
blake3 = "1"
crc = "3"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
hex = "0.4"
base64 = "0.22"
digest = "0.10"
